--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "helmet": "^7.1.0",
     "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.2",
+    "mongo-join-query": "^1.0.2",
     "mongoose": "^5.13.21",
     "morgan": "^1.9.1",
     "multer": "^1.4.5-lts.1",
