--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
+    "aws-sdk": "^2.1555.0",
     "axios": "^1.6.5",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
@@ -32,6 +33,7 @@
     "mongoose": "^5.13.21",
     "morgan": "^1.9.1",
     "multer": "^1.4.5-lts.1",
+    "multer-s3": "^2.10.0",
     "nodemailer": "^6.9.7",
     "pug": "^3.0.2",
     "sharp": "^0.30.1",
