--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
     "sharp": "^0.30.1",
     "slugify": "^1.6.6",
     "stripe": "^7.0.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-themes": "^1.4.2",
+    "swagger-ui-express": "^5.0.0",
     "validator": "^13.11.0",
     "xss-clean": "^0.1.4"
   },
